tests/effects-corpus/corpus/reject/r_call_row_mismatch_missing.pdx
// Row mismatch: caller missing effect required by callee
module RowMismatchMissing = structure {
  effect Io {
    op read : (u16) -> u8
  }

  let requires_io : (u16) -> u8 !{Io} =
    fn (port : u16) -> 0

  let missing : (u16) -> u8 !{} =
    fn (port : u16) -> requires_io(port)
}
